unpackaged/main/default/objects/Account_Flow_Log__c/Account_Flow_Log__c.object-meta.xml
<CustomObject>
    <label>Account Flow Log</label>
    <nameField>
        <displayFormat>AFL-{0000000}</displayFormat>
        <label>Account Flow Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Flow Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>