unpackaged/main/default/objects/Account_Flow_Log__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Flow Logs</relationshipLabel>
    <relationshipName>Account_Flow_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>