unpackaged/main/default/objects/Account_Flow_Log__c/fields/Actor_Level__c.field-meta.xml
<CustomField>
    <fullName>Actor_Level__c</fullName>
    <label>Actor Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Level</valueSetName>
    </valueSet>
</CustomField>