unpackaged/main/default/objects/Account_Flow_Log__c/fields/Actor_Subteam__c.field-meta.xml
<CustomField>
    <fullName>Actor_Subteam__c</fullName>
    <label>Actor Subteam</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Subteam</valueSetName>
    </valueSet>
</CustomField>