unpackaged/main/default/objects/Account_Flow_Log__c/fields/Actor_Team__c.field-meta.xml
<CustomField>
    <fullName>Actor_Team__c</fullName>
    <label>Actor Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Team</valueSetName>
    </valueSet>
</CustomField>