unpackaged/main/default/objects/Account_Flow_Log__c/fields/Actor_Territory__c.field-meta.xml
<CustomField>
    <fullName>Actor_Territory__c</fullName>
    <label>Actor Territory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Territory</valueSetName>
    </valueSet>
</CustomField>