unpackaged/main/default/objects/Account_Flow_Log__c/fields/Custom_Log_3__c.field-meta.xml
<CustomField>
    <fullName>Custom_Log_3__c</fullName>
    <label>Custom Log 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>