unpackaged/main/default/objects/Account_Flow_Log__c/fields/Interview_Status__c.field-meta.xml
<CustomField>
    <fullName>Interview_Status__c</fullName>
    <label>Interview Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fault</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>